Add netstandard2.0 target and update build script

--- a/runtime/CSharp/Antlr4.Runtime.Test/Antlr4.Runtime.Test.csproj
+++ b/runtime/CSharp/Antlr4.Runtime.Test/Antlr4.Runtime.Test.csproj
@@ -2,8 +2,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <!-- Note: net452 is used for testing the netstandard1.1 target. -->
-    <TargetFrameworks>net20;net30;net35;portable40-net40+sl5+win8+wp8+wpa81;net40;net45;net452</TargetFrameworks>
+    <!-- Note:
+          - net452 is used for testing the netstandard1.1 target
+          - net5.0 is used for testing the netstandard2.0 target
+     -->
+    <TargetFrameworks>net20;net30;net35;portable40-net40+sl5+win8+wp8+wpa81;net40;net45;net452;net5.0</TargetFrameworks>
     <EnableDefaultNoneItems>False</EnableDefaultNoneItems>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 
@@ -106,6 +109,16 @@
       <ItemGroup>
         <ProjectReference Include="..\Antlr4.Runtime\Antlr4.Runtime.csproj">
           <SetTargetFramework>TargetFramework=netstandard1.1</SetTargetFramework>
+        </ProjectReference>
+      </ItemGroup>
+    </When>
+    <When Condition="'$(TargetFramework)' == 'net5.0'">
+      <PropertyGroup>
+        <DefineConstants>$(DefineConstants);PORTABLE;NET45;NET45PLUS;NET40PLUS;NET35PLUS;NET30PLUS;NET20PLUS</DefineConstants>
+      </PropertyGroup>
+      <ItemGroup>
+        <ProjectReference Include="..\Antlr4.Runtime\Antlr4.Runtime.csproj">
+          <SetTargetFramework>TargetFramework=netstandard2.0</SetTargetFramework>
         </ProjectReference>
       </ItemGroup>
     </When>
