--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,11 @@
 version: 1.0.{build}
-os: Visual Studio 2017
+os: Visual Studio 2019
 configuration: Release
 init:
 - git config --global core.autocrlf true
 build_script:
 - cd build
-- powershell -Command .\build.ps1 -VisualStudioVersion "15.0" -GenerateTests -MavenRepo C:\MavenRepo -Logger "${env:ProgramFiles}\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" -Java6Home "${env:ProgramFiles}\Java\jdk1.7.0\jre"
+- powershell -Command .\build.ps1 -VisualStudioVersion "16.0" -GenerateTests -MavenRepo C:\MavenRepo -Logger "${env:ProgramFiles}\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" -Java6Home "${env:ProgramFiles}\Java\jdk1.7.0\jre"
 - cd ..
 test_script:
 - vstest.console /logger:Appveyor /TestCaseFilter:"TestCategory=runtime-suite" "C:\projects\antlr4cs\runtime\CSharp\Antlr4.Runtime.Test\bin\%CONFIGURATION%\net45\Antlr4.Runtime.Test.dll"
@@ -15,6 +15,7 @@ test_script:
 - vstest.console /logger:Appveyor /TestCaseFilter:"TestCategory=runtime-suite" "C:\projects\antlr4cs\runtime\CSharp\Antlr4.Runtime.Test\bin\%CONFIGURATION%\net35\Antlr4.Runtime.Test.dll"
 - vstest.console /logger:Appveyor /TestCaseFilter:"TestCategory=runtime-suite" "C:\projects\antlr4cs\runtime\CSharp\Antlr4.Runtime.Test\bin\%CONFIGURATION%\net30\Antlr4.Runtime.Test.dll"
 - vstest.console /logger:Appveyor /TestCaseFilter:"TestCategory=runtime-suite" "C:\projects\antlr4cs\runtime\CSharp\Antlr4.Runtime.Test\bin\%CONFIGURATION%\net20\Antlr4.Runtime.Test.dll"
+- vstest.console /logger:Appveyor /TestCaseFilter:"TestCategory=runtime-suite" "C:\projects\antlr4cs\runtime\CSharp\Antlr4.Runtime.Test\bin\%CONFIGURATION%\net5.0\Antlr4.Runtime.Test.dll"
 cache:
 - C:\MavenRepo -> **\pom.xml
 artifacts:
