--- a/runtime/CSharp/Antlr4.Runtime.Test/Antlr4.Runtime.Test.csproj
+++ b/runtime/CSharp/Antlr4.Runtime.Test/Antlr4.Runtime.Test.csproj
@@ -6,7 +6,7 @@
           - net452 is used for testing the netstandard1.1 target
           - net5.0 is used for testing the netstandard2.0 target
      -->
-    <TargetFrameworks>net20;net30;net35;portable40-net40+sl5+win8+wp8+wpa81;net40;net45;net452;net5.0</TargetFrameworks>
+    <TargetFrameworks>net20;net30;net35;net40;net45;net452;net5.0</TargetFrameworks>
     <EnableDefaultNoneItems>False</EnableDefaultNoneItems>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 
@@ -28,8 +28,6 @@
   <Choose>
     <When Condition="'$(TargetFramework)' == 'net20'">
       <PropertyGroup>
-        <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
-        <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
         <DefineConstants>$(DefineConstants);NET20;NET20PLUS</DefineConstants>
         <MSTest2>False</MSTest2>
       </PropertyGroup>
@@ -42,8 +40,6 @@
     </When>
     <When Condition="'$(TargetFramework)' == 'net30'">
       <PropertyGroup>
-        <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
-        <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
         <DefineConstants>$(DefineConstants);NET30;NET30PLUS;NET20PLUS</DefineConstants>
         <MSTest2>False</MSTest2>
       </PropertyGroup>
@@ -63,20 +59,6 @@
       <ItemGroup>
         <ProjectReference Include="..\Antlr4.Runtime\Antlr4.Runtime.csproj">
           <SetTargetFramework>TargetFramework=net35-client</SetTargetFramework>
-        </ProjectReference>
-      </ItemGroup>
-    </When>
-    <When Condition="'$(TargetFramework)' == 'portable40-net40+sl5+win8+wp8+wpa81'">
-      <PropertyGroup>
-        <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
-        <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-        <TargetFrameworkProfile />
-        <DefineConstants>$(DefineConstants);PORTABLE;NET40;NET40PLUS;NET35PLUS;NET30PLUS;NET20PLUS</DefineConstants>
-        <MSTest2>False</MSTest2>
-      </PropertyGroup>
-      <ItemGroup>
-        <ProjectReference Include="..\Antlr4.Runtime\Antlr4.Runtime.csproj">
-          <SetTargetFramework>TargetFramework=portable40-net40+sl5+win8+wp8+wpa81</SetTargetFramework>
         </ProjectReference>
       </ItemGroup>
     </When>
